--- a/config/database.yml
+++ b/config/database.yml
@@ -14,19 +14,19 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: hdug2451997
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: project-food_development
+  database: food_service
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: project-food_test
+  database: food_service_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: project-food_production
-  username: project-food
+  database: food_service
+  username: root
   password: <%= ENV['PROJECT-FOOD_DATABASE_PASSWORD'] %>
