--- a/config/settings.yml
+++ b/config/settings.yml
@@ -25,3 +25,12 @@ user_avatar:
   medium: "300x300>"
   thumb: "100x100#"
 
+status:
+  new_order: 1
+  in_progress: 2
+  done: 3
+user_type:
+   admin: 1
+   shipper: 2
+   chef: 3
+   customer: 4
