--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,9 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: 123456
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
   socket: /var/run/mysqld/mysqld.sock
 
 development:
@@ -49,6 +50,6 @@ test:
 #
 production:
   <<: *default
-  database: food_service
+  database: food_service_production
   username: root
-  password: <%= ENV['PROJECT-FOOD_DATABASE_PASSWORD'] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
